syntax = "proto3";

package sdl.v1;

import "google/api/annotations.proto";

option go_package = "github.com/panyam/sdl/gen/go/sdl/v1";

// SystemInfo represents a system in the catalog
message SystemInfo {
  string id = 1;
  string name = 2;
  string description = 3;
  string category = 4;
  string difficulty = 5;
  repeated string tags = 6;
  string icon = 7;
  string last_updated = 8;
}

// SystemProject represents a full system project
message SystemProject {
  string id = 1;
  string name = 2;
  string description = 3;
  string category = 4;
  string difficulty = 5;
  repeated string tags = 6;
  string icon = 7;
  map<string, SystemVersion> versions = 8;
  string default_version = 9;
  string last_updated = 10;
}

// SystemVersion represents a version of a system
message SystemVersion {
  string sdl = 1;
  string recipe = 2;
  string readme = 3;
}

// Request messages
message ListSystemsRequest {}

message ListSystemsResponse {
  repeated SystemInfo systems = 1;
}

message GetSystemRequest {
  string id = 1;
  string version = 2; // Optional, defaults to default_version
}

message GetSystemResponse {
  SystemProject system = 1;
}

message GetSystemContentRequest {
  string id = 1;
  string version = 2; // Optional, defaults to default_version
}

message GetSystemContentResponse {
  string sdl_content = 1;
  string recipe_content = 2;
  string readme_content = 3;
}

// SystemsService manages the system examples catalog
service SystemsService {
  // ListSystems returns all available systems
  rpc ListSystems(ListSystemsRequest) returns (ListSystemsResponse) {
    option (google.api.http) = {
      get: "/v1/systems"
    };
  }

  // GetSystem returns a specific system with metadata
  rpc GetSystem(GetSystemRequest) returns (GetSystemResponse) {
    option (google.api.http) = {
      get: "/v1/systems/{id}"
    };
  }

  // GetSystemContent returns the SDL and recipe content for a system
  rpc GetSystemContent(GetSystemContentRequest) returns (GetSystemContentResponse) {
    option (google.api.http) = {
      get: "/v1/systems/{id}/content"
    };
  }
}
